# axum-cors

./: Cargo.toml  LICENSE  README.md
example/any-origin/: Cargo.toml
example/any-origin/src/: main.rs
src/: lib.rs
src/cors/: builder.rs  config.rs  layer.rs  mod.rs  service.rs
